# zond-ugcs

./: README.md  pyproject.toml  readZond.py
notebooks/: autopick_chena.ipynb
zond_ugcs/: __init__.py  read.py
